<?xml version="1.0"?>
<package format="2">
  <name>mav_exploration_eval</name>
  <version>0.0.0</version>
  <description>The mav_exploration_eval package</description>

  <maintainer email="albertsseligmann@gmail.com">Albert Seligmann</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <depend>roscpp</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox</depend>

</package>
